[gd_scene load_steps=2 format=3 uid="uid://toolsscreen"]

[ext_resource type="Script" uid="uid://x73g8a1wu7xi" path="res://ui/tools_screen.gd" id="1"]

[node name="ToolsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MainVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="HBoxContainer" parent="MainVBox"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MainVBox/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "TOOLS"

[node name="ToolsList" type="VBoxContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SeedButton" type="Button" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
layout_mode = 2
text = "Seed Sample Data"

[node name="ClearButton" type="Button" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(1, 0, 0, 1)
text = "Delete Data"

[node name="ExportButton" type="Button" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
layout_mode = 2
text = "Export Database"

[node name="ImportButton" type="Button" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
layout_mode = 2
text = "Import Database"

[node name="HSeparator2" type="HSeparator" parent="MainVBox/ToolsList"]
layout_mode = 2

[node name="DirtyButton" type="Button" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
layout_mode = 2
text = "mark all dirty"

[node name="HostButton" type="Button" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
layout_mode = 2
text = "Host Session"

[node name="JoinButton" type="Button" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
layout_mode = 2
text = "Join Session"

[node name="DiscoveredList" type="ItemList" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="LogLabel" type="RichTextLabel" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 8
theme_override_font_sizes/normal_font_size = 18

[node name="HSeparator3" type="HSeparator" parent="MainVBox/ToolsList"]
layout_mode = 2

[node name="DiagnosticsButton" type="Button" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
layout_mode = 2
text = "Diagnostics"

[node name="HSeparator" type="HSeparator" parent="MainVBox/ToolsList"]
layout_mode = 2

[node name="BackButton" type="Button" parent="MainVBox/ToolsList"]
unique_name_in_owner = true
layout_mode = 2
text = "BACK"
